# opendsp

./: .gitignore  .gitmodules  README.md  TODO  build_os.sh  manage_img.sh  pack.sh  run-builder  start_build_env
PKGBUILDs/: build_packages.sh
PKGBUILDs/cadence-git/: PKGBUILD
PKGBUILDs/calf-git/: PKGBUILD
PKGBUILDs/carla-git/: PKGBUILD
PKGBUILDs/csound/: PKGBUILD
PKGBUILDs/distrho-lv2-git/: PKGBUILD  meson_options.txt
PKGBUILDs/distrho-ports-lv2-git/: .SRCINFO  PKGBUILD
PKGBUILDs/dpf-plugins-git/: PKGBUILD
PKGBUILDs/drmr-falktx-git/: PKGBUILD
PKGBUILDs/ecasound/: PKGBUILD
PKGBUILDs/fabla-git/: .SRCINFO  PKGBUILD  disable_sse.patch  disable_sse.patch.1try
PKGBUILDs/ganv-git/: PKGBUILD
PKGBUILDs/giada/: PKGBUILD
PKGBUILDs/gmm/: PKGBUILD
PKGBUILDs/helm/: PKGBUILD
PKGBUILDs/ingen-git/: .SRCINFO  PKGBUILD  wscript.force.patch
PKGBUILDs/input2midi/: PKGBUILD
PKGBUILDs/jack/: PKGBUILD
PKGBUILDs/jack-example-tools/: PKGBUILD  meson_options.txt
PKGBUILDs/jamrouter-git/: PKGBUILD  child_signal.patch
PKGBUILDs/klystrack-git/: PKGBUILD
PKGBUILDs/lebiniou3/: PKGBUILD  jackaudio.patch
PKGBUILDs/lebiniou3-data/: PKGBUILD
PKGBUILDs/lilv-git/: PKGBUILD
PKGBUILDs/linux-odroid-xu3-rt-opendsp/: PKGBUILD  config  i2c_freeze.patch  linux-odroid-xu3.install  linux.preset  (+6 more)
builder/: Dockerfile  README.md  builder-init.sh  manage_img.sh
cross-compile-docker/: Dockerfile  README.md  distcc-init-armv7h.sh
docker/: Dockerfile  README.md
meta-dsp/: README.md
meta-opendsp/: README.md
meta-opendsp-audio/: README.md
meta-video/: README.md
(+8151 files in other folders)
